--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
     "homepage": "https://github.com/dlr-delarocha/php-blms-sdk.git",
     "require": {
         "php":  ">=7.1",
-        "guzzlehttp/guzzle": "^6.5",
-        "illuminate/support": "^6.13"
+        "guzzlehttp/guzzle": "^6.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5"
